2014-08-18  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Copy tag names to events, not the URL.

2014-08-18  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* lib/PandoraFMS/Core.pm: Added an internal action to
	create a Integria IMS incident on the function
	"pandora_execute_action". Added the function
	"pandora_create_integria_ticket".

	* util/pandora_manage.pl: Added an option to recreate
	a collection with the function "cli_recreate_collection".
	Added a call to get the Pandora FMS shared config.

2014-08-14  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf.new: Added recon_timing_template to the
	  configuration file.

2014-08-14  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/ReconServer.pm: Added a separate timing template for
	  network scans, since they can be very slow.

2014-08-14  Sancho Lerena <slerena@artica.es>

	* FreeBSD/pandora_server.conf.new,
	conf/pandora_server.conf.new,
	conf/pandora_server.conf.windows: Modified default configuration
	to avoid put all agents in the group id #2. 

2014-08-14  Koichiro Kikuchi <koichiro@rworks.jp>

	* pandora_server_installer: Fixed wrong chmod target.

2014-08-14 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/PluginServer.pm: Added new alert macros
	_plugin_param1_ (,_plugin_param2_ and so on) to access to
	each of plugin parameters. Also added _plugin_param1_desc_
	to access to each description of plugin parameters.

2014-08-14  Koichiro Kikuchi <koichiro@rworks.jp>

	* FreeBSD/tentacle_server: Set rcvar statically.

2014-08-13  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.redhat.spec: Fixed some typos (packages were not
	  being built).

2014-08-12  Koichiro Kikuchi <koichiro@rworks.jp>

	* bin/pandora_server: Fixed issue that pandora_server failed to
	 shut down properly on non-Linux systems.

	Merged r10335 from branch 5.0.

2014-08-12  Koichiro Kikuchi <koichiro@rworks.jp>
