@@ -1,3 +1,7 @@
+2014-08-21  Junichi Satoh <junichi@rworks.jp>
+
+	* util/pandora_manage.pl: Added an option to add an event comment.
+
 2014-08-18  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Copy tag names to events, not the URL.
